# peptideUtils

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Findzlib.cmake
doc/doxygen/: Doxyfile  Doxyfile.in
doc/fig/: MsInferface_inheritence_diagram.afdesign
include/: atomMasses.hpp  bufferFile.hpp  exceptions.hpp  fastaFile.hpp  molecularFormula.hpp  ms2.hpp  msScan.hpp  peptideUtils.hpp  sequenceUtils.hpp  species.hpp  tsvFile.hpp  utils.hpp
include/msInterface/: ms2File.hpp  msInterface.hpp  msScan.hpp  msXMLBase.hpp  mzMLFile.hpp  mzXMLFile.hpp
include/msInterface/internal/: base64_utils.hpp  xml_utils.hpp
share/: atomMasses.txt  defaultResidueAtoms.txt
src/: bufferFile.cpp  fastaFile.cpp  molecularFormula.cpp  ms2.cpp  msScan.cpp  peptideUtils.cpp  sequenceUtils.cpp  tsvFile.cpp  utils.cpp
src/msInterface/: ms2File.cpp  msInterface.cpp  msScan.cpp  msXMLBase.cpp  mzMLFile.cpp  mzXMLFile.cpp
src/msInterface/internal/: base64_utils.cpp  xml_utils.cpp
test/: main.cpp
